--- a/hooser-derive/Cargo.toml
+++ b/hooser-derive/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+heck = "0.5.0"
 quote = "1.0.36"
-syn = "2.0.72"
+syn = { version = "2.0.72", features = ["extra-traits"] }
 toml = "0.8.19"
