--- a/examples/demo/Cargo.toml
+++ b/examples/demo/Cargo.toml
@@ -1,15 +1,8 @@
 [package]
-name = "hooser-derive"
+name = "demo"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-proc-macro = true
-
 [dependencies]
-heck = "0.5.0"
-quote = "1.0.36"
-syn = { version = "2.0.72", features = ["extra-traits"] }
-toml = "0.8.19"
