--- a/wheatley-macro/Cargo.toml
+++ b/wheatley-macro/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = "wheatley"
+name = "wheatley-macro"
 version = "0.1.0"
 edition = "2021"
 description = "Embed static, structured assets into your program"
 keywords = ["assets", "embed", "dir", "include", "static", "file", "folder", "asset"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+proc-macro = true
 
 [dependencies]
 boomphf = "0.6.0"
@@ -15,10 +18,7 @@ proc-macro2 = "1.0.86"
 quote = "1.0.36"
 syn = { version = "2.0.72", features = ["extra-traits"] }
 toml = "0.8.19"
-wheatley-macro = { path = "wheatley-macro" }
 wyhash = "0.5.0"
-
-[workspace]
 
 [dev-dependencies]
 quickcheck = "1.0.3"
