--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,14 @@ wyhash = "0.5.0"
 [workspace]
 
 [dev-dependencies]
+brotli = "6.0.0"
+flate2 = "1.0.34"
 quickcheck = "1.0.3"
+snap = "1.1.1"
+zstd = "0.13.2"
+
+[features]
+br = ["wheatley-macro/br"]
+gzip = ["wheatley-macro/gzip"]
+snap = ["wheatley-macro/snap"]
+zstd = ["wheatley-macro/zstd"]
