--- a/wheatley-macro/Cargo.toml
+++ b/wheatley-macro/Cargo.toml
@@ -12,13 +12,24 @@ proc-macro = true
 
 [dependencies]
 boomphf = "0.6.0"
+brotli = { version = "6.0.0", optional = true }
+cfg-if = "1.0.0"
+flate2 = { version = "1.0.34", optional = true }
 heck = "0.5.0"
 phf = { version = "0.11", features = ["macros"] }
 proc-macro2 = "1.0.86"
 quote = "1.0.36"
+snap = { version = "1.1.1", optional = true }
 syn = { version = "2.0.72", features = ["extra-traits"] }
 toml = "0.8.19"
 wyhash = "0.5.0"
+zstd = { version = "0.13.2", optional = true }
 
 [dev-dependencies]
 quickcheck = "1.0.3"
+
+[features]
+br = ["dep:brotli"]
+gzip = ["dep:flate2"]
+snap = ["dep:snap"]
+zstd = ["dep:zstd"]
