--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,14 @@ description = "Embed static, structured assets into your program"
 keywords = ["assets", "embed", "dir", "include", "static", "file", "folder", "asset"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+
+[workspace.dependencies]
+assertables = "9.5.0"
 
 [dependencies]
 boomphf = "0.6.0"
+globset = "0.4.15"
 heck = "0.5.0"
 phf = { version = "0.11", features = ["macros"] }
 proc-macro2 = "1.0.86"
@@ -18,13 +23,15 @@ toml = "0.8.19"
 wheatley-macro = { path = "wheatley-macro" }
 wyhash = "0.5.0"
 
-[workspace]
-
 [dev-dependencies]
 brotli = "6.0.0"
 flate2 = "1.0.34"
 quickcheck = "1.0.3"
+rand = "0.8.5"
 snap = "1.1.1"
+tempfile = "3.14.0"
+test-case = "3.3.1"
+walkdir = "2.5.0"
 zstd = "0.13.2"
 
 [features]
